# tda-longevity-resilience

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  README.fr.md  README.md  ROADMAP.md  SECURITY.md  Snakefile  docker-compose.yml  environment.lock.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint.yml  test.yml
binder/: postBuild
config/: snakemake_config.yaml
docs/: api.md  biological_interpretation.md  competitive_landscape.md  contributing.md  data_sources.md  datasheet.md  deep_research_tda.md  epistemological_limits.md  future_directions.md  glossary.md  installation.md  learning_resources.md  mathematical_background.md  references.md  related_work.md  topo_format_spec.md  troubleshooting.md  tutorials.md
notebooks/: 00_download_data.ipynb  00_synthetic_validation.ipynb  01_persistent_homology.ipynb  02_mapper_analysis.ipynb  03_comparison_accelerated_vs_resilient.ipynb  04_feature_extraction_ml.ipynb  05_biological_interpretation.ipynb  05_interactive_dashboard.py
results/tables/: demo_metrics.csv
scripts/: batch_pipeline.py  demo_pipeline.py  download_data.py  generate_synthetic_data.py
src/: __init__.py  aging_scores.py  bayesian_labels.py  benchmark_utils.py  bio_enrichment.py  cli.py  config.py  data_utils.py  epigenetic_clocks.py  features.py  full_bootstrap.py  geom_embeddings.py  logging_config.py  longitudinal.py  mapper_utils.py  metrics.py  ml_utils.py  regularized_aging.py  sensitivity_analysis.py  tda_utils.py  topo_format.py  topo_gnn.py  topoae.py  topological_kernels.py  validation.py  visualization.py
tests/: conftest.py  test_aging_scores.py  test_benchmark_utils.py  test_bio_enrichment.py  test_cli.py  test_config.py  test_deep.py  test_features.py  test_mapper_utils.py  test_metrics.py  test_ml_utils.py  test_quality.py  test_real_extreme.py  test_tda_utils.py  test_topo_format.py  test_validation.py  test_visualization.py
