[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tda-longevity-resilience"
version = "1.0.0"
description = "Topological Data Analysis for Multi-Omics Longevity Resilience Research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brandon Palhano Machado", email = "brandonpalhano@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "topological-data-analysis", "persistent-homology", "multi-omics",
    "longevity", "resilience", "aging-acceleration", "mapper-algorithm",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
    "ripser>=0.6.4",
    "persim>=0.3.1",
    "kmapper>=2.0",
    "networkx>=3.1",
    "plotly>=5.15",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-notebook>=0.10",
    "nbval>=0.11",
    "flake8>=6.1",
    "black>=23.7",
    "isort>=5.12",
    "mypy>=1.5",
    "pre-commit>=3.3",
    "bandit>=1.7",
]
bio = [
    "gseapy>=1.0",
]
viz = [
    "streamlit>=1.27",
]
tda = [
    "giotto-tda>=0.6",
    "teaspoon>=1.3",
]
all = [
    "tda-longevity-resilience[dev,bio,viz,tda]",
]

[project.urls]
Homepage = "https://github.com/jbrandonp/tda-longevity-resilience"
Documentation = "https://github.com/jbrandonp/tda-longevity-resilience/tree/main/docs"
Repository = "https://github.com/jbrandonp/tda-longevity-resilience.git"
Issues = "https://github.com/jbrandonp/tda-longevity-resilience/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "tda: marks tests requiring ripser/kmapper (deselect with '-m \"not tda\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/visualization.py"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise ImportError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "data", "docs", ".github", "notebooks"]
skips = ["B101", "B301", "B303", "B311", "B403"]
